--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,8 +5,9 @@
     <title>DreamGear</title>
     <style>
         body {
-            background-color: #f0f0f0; /* Color de fondo */
+            background-color: #000; /* Cambiar color de fondo a negro */
             text-align: center; /* Centrar contenido */
+            color: #fff; /* Cambiar color del texto a blanco */
         }
         img {
             max-width: 100%; /* Ajustar imagen al ancho del contenedor */
@@ -16,6 +17,6 @@
     </style>
 </head>
 <body>
-<img src="img/DreamGear_Logo.jpg" alt="DreamGear LogoS">
+<img src="img/DreamGearLogo.png" alt="DreamGear Logo">
 </body>
 </html>
